--- a/modulo.css
+++ b/modulo.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(https://png.pngtree.com/png-vector/20220206/ourlarge/pngtree-barbershop-icons-set-haircut-information-collection-vector-png-image_21298624.jpg);
+    background-image: url('../imagens/fundo.jpg');
     background-size: cover;
     background-position: center;
     height: 100vh;
